src/syntax_analysis/expressions/tests/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__tests__test_syntax_analysis_for_boolean_expression_case2.snap
---
source: src/syntax_analysis/expressions/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code.to_string()))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "BOOLEAN": {
            "boolean_token": "FALSE"
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
