src/syntax_analysis/expressions/tests/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__tests__test_syntax_analysis_for_integer_expression_case1.snap
---
source: src/syntax_analysis/expressions/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code.to_string()))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "INTEGER": {
            "integer_token": {
              "INTEGER": {
                "literal": "5"
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
